--- a/static/style.css
+++ b/static/style.css
@@ -137,3 +137,27 @@ main h3 {
     align-items: center;
   }
 }
+
+.-img {
+  display: block;
+  margin: 2rem auto;
+  max-width: 700px;
+}
+
+.survey-img {
+  display: block;
+  margin: 2rem auto;
+  max-width: 220px;
+}
+
+.main-list {
+  text-align: center;
+}
+
+.robotics-list {
+  text-align: left;
+}
+
+.webdesign-list {
+  text-align: left;
+}
